# datashark-core

./: README.md  datashark-dispatch-worker@.service  datashark-plugin-worker@.service  datashark.dist.yml  datashark.service  pyproject.toml  setup.cfg
datashark_core/: __init__.py  api.py  config.py  database.py  datetime.py  dispatcher.py  filesystem.py  logging.py  platform.py  plugin.py  processor.py  yara.py
datashark_core/meta/: __init__.py  processor.py
datashark_core/model/: __init__.py
datashark_core/model/api/: __init__.py  object.py
datashark_core/model/database/: __init__.py  helper.py  object.py
ds_core/: api.py  config.py  database.py  dispatch.py  dispatcher.py  filesystem.py  logging.py  platform.py  plugin.py  redis.py  yara.py
ds_core/database/: __init__.py  helper.py  object.py
ds_core/meta/: __init__.py  plugin.py
ds_core/plugin/: __init__.py  meta.py
