[metadata]
name = datashark-core
description = Datashark Core
long_description = file: README.md, LICENSE
keywords = datashark, core
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    yarl
    sqlalchemy
    ruamel.yaml
    python-slugify
    psycopg2-binary
